test/fixtures/themes/002-comment-id/invalid/index.hbs
<html>
<body>
<script>
    this.page.identifier = '{{id}}';
</script>
</body>
</html>
